Fixed centering on mobile

--- a/style.css
+++ b/style.css
@@ -26,9 +26,17 @@ html {
 }
 
 #image-fence {
+  display: inline-block;
   max-height: 80vh;
   max-width: 50vw;
 }
+
+#img-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 
 .rgb-bar {
   width: 100%;
